footer yandex-map

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <meta name="msapplication-TileColor" content="#ffffff" />
 
         <title>Atlant-gaz</title>
+        <script src="https://api-maps.yandex.ru/v3/?apikey=0863dd24-b63f-477a-b4dc-a0193e946b4a&lang=ru_RU"></script>
     </head>
     <body>
         <!-- <header class="header">
@@ -610,15 +611,7 @@
                             </a>
                         </div>
 
-                        <div class="footer__map">
-                            <iframe
-                                src="https://yandex.by/map-widget/v1/?ll=37.771668%2C55.547159&z=17.65"
-                                class="footer__iframe"
-                                loading="lazy"
-                                allowfullscreen
-                            >
-                            </iframe>
-                        </div>
+                        <div class="footer__map"></div>
                     </div>
 
                     <a class="footer__link" href="#">Политика конфиденциальности</a>
