footer map fixed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <script src="https://api-maps.yandex.ru/v3/?apikey=0863dd24-b63f-477a-b4dc-a0193e946b4a&lang=ru_RU"></script>
     </head>
     <body>
-        <!-- <header class="header">
+        <header class="header">
             <div class="header__container container">
                 <div class="header__logo-wrapper">
                     <div class="header__logo-element">
@@ -40,9 +40,9 @@
                     </div>
                 </div>
             </div>
-        </header>  -->
+        </header>
         <main>
-            <!-- <section class="intro">
+            <section class="intro">
                 <div class="intro__container container">
                     <div class="intro__day-wrapper">
                         <img
@@ -585,42 +585,37 @@
                         Заказать газ
                     </button>
                 </div>
-            </section> -->
-
-            <section class="footer">
-                <div class="footer__container container">
-                    <div class="footer__wrapper">
-                        <div class="footer__inner">
-                            <h2 class="footer__title">Посетите наш уютный офис</h2>
-
-                            <p class="footer__text">
-                                где мы сможем вас полностью проконсультировать по всем вопросам
-                            </p>
-
-                            <hr class="footer__hr" />
-
-                            <h3 class="footer__subtitle">Офис</h3>
-
-                            <address class="footer__address">
-                                Видное, Белокаменное шоссе, 20
-                            </address>
-
-                            <h4 class="footer__phone-label">Телефон:</h4>
-                            <a class="footer__phone-link" href="tel:+79263306834">
-                                +7 926 330-68-34
-                            </a>
-                        </div>
-
-                        <div class="footer__map"></div>
-                    </div>
-
-                    <a class="footer__link" href="#">Политика конфиденциальности</a>
-                    <a class="footer__link footer__link--right" href="#"
-                        >Согласие на обработку персональных данных</a
-                    >
-                </div>
             </section>
         </main>
+        <footer class="footer">
+            <div class="footer__container container">
+                <div class="footer__wrapper">
+                    <div class="footer__inner">
+                        <h2 class="footer__title">Посетите наш уютный офис</h2>
+
+                        <p class="footer__text">
+                            где мы сможем вас полностью проконсультировать по всем вопросам
+                        </p>
+
+                        <hr class="footer__hr" />
+
+                        <h3 class="footer__subtitle">Офис</h3>
+
+                        <address class="footer__address">Видное, Белокаменное шоссе, 20</address>
+
+                        <h4 class="footer__phone-label">Телефон:</h4>
+                        <a class="footer__phone-link" href="tel:+79263306834"> +7 926 330-68-34 </a>
+                    </div>
+
+                    <div class="footer__map"></div>
+                </div>
+
+                <a class="footer__link" href="#">Политика конфиденциальности</a>
+                <a class="footer__link footer__link--right" href="#"
+                    >Согласие на обработку персональных данных</a
+                >
+            </div>
+        </footer>
 
         <script type="module" src="/src/js/script.js"></script>
     </body>
