--- a/index.html
+++ b/index.html
@@ -651,6 +651,32 @@
             </div>
         </div>
 
+        <section class="confirmation hide">
+            <div class="header__container container">
+                <div class="header__logo-wrapper">
+                    <div class="header__logo-element">
+                        <img src="/src/img/header/header__logo.png" alt="Логотип Atlant-gaz" />
+                    </div>
+
+                    <div class="header__logo-separator" aria-hidden="true"></div>
+                    <h1 class="header__logo-title">Расправь плечи в теплом доме</h1>
+                </div>
+
+                <div class="header__contact-wrapper">
+                    <a href="tel:+79263306834" class="header__contacts-phone">+7 926 330-68-34</a>
+                    <div class="header__contacts-question">
+                        <a href="tel:+79263306834">Срочный вопрос</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="confirmation__container container">
+                <h2 class="confirmation__title">Спасибо за обращение</h2>
+                <p class="confirmation__text">Наш специалист свяжется с вами в ближайшее время</p>
+                <button class="confirmation__button intro__button">Вернуться на сайт</button>
+            </div>
+        </section>
+
         <script type="module" src="/src/js/script.js"></script>
     </body>
 </html>
