--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
             </div>
         </div>
 
-        <section class="confirmation hide">
+        <div class="confirmation hide">
             <div class="header__container container">
                 <div class="header__logo-wrapper">
                     <div class="header__logo-element">
@@ -675,7 +675,7 @@
                 <p class="confirmation__text">Наш специалист свяжется с вами в ближайшее время</p>
                 <button class="confirmation__button intro__button">Вернуться на сайт</button>
             </div>
-        </section>
+        </div>
 
         <script type="module" src="/src/js/script.js"></script>
     </body>
