question__form XMLHttpRequest

--- a/index.html
+++ b/index.html
@@ -501,6 +501,7 @@
                             type="text"
                             placeholder="Ваше имя"
                             required
+                            value="Василий vinogradov"
                         />
                         <div class="question__form-input-error"></div>
                         <input
@@ -509,6 +510,7 @@
                             type="text"
                             placeholder="Ваш email или телефон"
                             required
+                            value="vase3k@gmail.com"
                         />
                         <div class="question__form-input-error"></div>
                         <textarea
@@ -516,7 +518,9 @@
                             name="question"
                             placeholder="Ваш вопрос"
                             required
-                        ></textarea>
+                        >
+как отправить форму</textarea
+                        >
                         <div class="question__form-input-error"></div>
                         <button class="question__form-button" type="submit">Задать вопрос</button>
                     </form>
